--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "App to fetch and add recipes",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "devStart": "server.js"
   },
   "repository": {
     "type": "git",
