--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
   "homepage": "https://github.com/sanjaybenu/recipe-bank#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "connect-session-sequelize": "^7.1.7",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
+    "express-session": "^1.17.3",
     "mysql2": "^3.3.3",
     "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.31.1"
   },
   "devDependencies": {
