--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
+    "moment": "^2.29.4",
     "mysql2": "^3.3.3",
     "nodemon": "^2.0.22",
     "sequelize": "^6.31.1"
