--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "seeds": "node seeds/seed.js",
-    "postinstall": "npm seeds"
+    "postinstall": "npm run seeds"
   },
   "repository": {
     "type": "git",
